Update and rename project-tracking-intro-component-master.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="project-tracking-intro-component-master.css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
 
@@ -62,7 +62,7 @@
 
 
 
-    <script src="project-tracking-intro-component-master.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
